--- a/first/index.html
+++ b/first/index.html
@@ -1,1 +1,19 @@
 <!-- Put your HTML HERE, make sure to connect your index.css sheet -->
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="description" content="The First part of the Afternoon Project">
+        <meta name="keywords" content="first,awesome,afternoon">
+        <meta name="author" content="Matt Woodruff">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>First Part Afternoon Project</title>
+        <link rel="stylesheet" href="reset.css">
+        <link rel="stylesheet" href="index.css">
+    </head>
+    <body>
+        <header class="header"></header>
+        <section class="main-body"></section>
+        <footer class="footer"></footer>
+    </body>
+</html>
