Finished the Second part

--- a/second/index.html
+++ b/second/index.html
@@ -3,17 +3,26 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <meta name="description" content="The First part of the Afternoon Project">
-        <meta name="keywords" content="first,awesome,afternoon">
+        <meta name="description" content="The Second part of the Afternoon Project">
+        <meta name="keywords" content="second,awesome,afternoon">
         <meta name="author" content="Matt Woodruff">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>First Part Afternoon Project</title>
+        <title>Second Part Afternoon Project</title>
         <link rel="stylesheet" href="reset.css">
         <link rel="stylesheet" href="index.css">
     </head>
     <body>
-        <header class="header"></header>
-        <section class="main-body"></section>
-        <footer class="footer"></footer>
+        <header class="first-container">
+            <section class="first-box"></section>
+            <section class="second-box"></section>
+            <section class="circle"></section>
+        </header>
+        <section class="second-container">
+            <section class="shadow-box"></section>
+            <section class="real-box"></section>
+        </section>
+        <footer class="third-container">
+            <h1 id="hello-friends">HELLO<br>FRIENDS</h1>
+        </footer>
     </body>
 </html>
