Finished the third part of the project!

--- a/third/index.html
+++ b/third/index.html
@@ -1,1 +1,27 @@
 <!-- Put your HTML HERE, make sure to connect your index.css sheet -->
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="description" content="The Third part of the Afternoon Project">
+        <meta name="keywords" content="third,awesome,afternoon">
+        <meta name="author" content="Matt Woodruff">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Third Part Afternoon Project</title>
+        <link rel="stylesheet" href="reset.css">
+        <link rel="stylesheet" href="index.css">
+    </head>
+    <body>
+        <header class="header">
+            <section class="little-box"></section>
+        </header>
+        <main>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque tempore optio consequuntur dignissimos qui, harum sunt cupiditate! Sequi, sit iste. Aliquid, voluptatum. Temporibus nesciunt quos molestias qui aliquid cumque nisi maxime, asperiores corporis ad assumenda molestiae iusto suscipit ea aperiam quisquam tempore harum! Accusantium, omnis repellendus, maxime dicta, rem cupiditate recusandae ducimus laudantium laboriosam officiis nihil ab facilis modi totam quas! Impedit voluptates repellat voluptatum cumque ipsam, tempore in animi corporis voluptatem praesentium molestiae distinctio eveniet libero sequi laborum.</p>
+        </main>
+        <section class="band-format" id="blue-band"></section>
+        <section class="band-format" id="green-band"></section>
+        <section class="band-format" id="gross-green-band"></section>
+        <section class="band-format" id="yellow-band"></section>
+        <footer></footer>
+    </body>
+</html>
